Revert "Fixed long whitespace in Labs, Project & Lecture page"

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6749,14 +6749,14 @@ button.close {
   background-color: #f1eaea;
 }
 body {
-  min-height: auto;
+  min-height: 2000px;
   padding-top: 70px;
   font-family: Arial, Helvetica, sans-serif;
   text-align: justify;
 }
 footer {
   margin: 0px auto;
-  margin-top: 50px;
+  margin-top: 20px;
   width: 800px;
 }
 p,
